welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:8: error: Boolean does not take parameters
	else ( a%5==0) {
                       ^